agrego estilado y textos

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Mi cubo básico</title>
-		<style>
-			body { margin: 0; }
-		</style>
-	</head>
-	<body>
-		<script type="module" src="/main.js"></script>
-	</body>
+
+<head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="styles.css">
+	<meta charset="utf-8">
+	<title>Nada permanece</title>
+</head>
+
+<body>
+	<section class="title">
+		<h1>Nada permanece igual</h1>
+		<h2 id="animated-text"></h2>
+	</section>
+	<script type="module" src="/main.js"></script>
+</body>
+
 </html>
